# instsql

./: .clang-format  CMakeLists.txt  LICENSE  README.md
lib/inc/instsql/: Client.h
lib/inc/instsql/result/: Result.h  Row.h
lib/src/: Client.cpp
lib/src/result/: Result.cpp  Row.cpp
test/: CMakeLists.txt  main.cpp
